# rustwork

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  LICENSE  MIGRATION_0.1.1.md  QUICKREF.md  README.md  test_grpc_p0.sh
crates/rustwork/: Cargo.toml
crates/rustwork-cli/: Cargo.toml
crates/rustwork-cli/data/conventions/: framework.json  template_project_conventions.json
crates/rustwork-cli/src/: lib.rs  main.rs
crates/rustwork-cli/src/commands/: add_service.rs  conventions.rs  db.rs  dev.rs  grpc_build.rs  make_controller.rs  make_model.rs  mod.rs  new.rs  utils.rs
crates/rustwork-cli/src/commands/make/: common.rs  controller.rs  mod.rs  model.rs
crates/rustwork-cli/src/commands/new/: execute.rs  microservices.rs  mod.rs  monolith.rs  utils.rs
crates/rustwork-cli/src/grpc/: ast.rs  errors.rs  mod.rs  proto_gen.rs
crates/rustwork-cli/src/grpc/build_gen/: content.rs  dependencies.rs  files.rs  mod.rs
crates/rustwork-cli/src/grpc/mcp_export/: convert.rs  mod.rs  scan.rs  types.rs
crates/rustwork-cli/src/grpc/parser/: message.rs  mod.rs  service.rs  types.rs  utils.rs
crates/rustwork-cli/src/grpc/rust_gen/: client.rs  handler.rs  imports.rs  mod.rs  server.rs  utils.rs
crates/rustwork-cli/src/mcp/: mod.rs
crates/rustwork-cli/src/mcp/common/: mod.rs
crates/rustwork-cli/src/mcp/common/confidence/: context.rs  mod.rs  response.rs  types.rs
crates/rustwork-cli/src/mcp/common/diagnostics/: collection.rs  collector.rs  parsers.rs  types.rs
crates/rustwork-cli/src/mcp/confidence/: context.rs  mod.rs  types.rs
crates/rustwork-cli/src/mcp/diagnostics/: collector.rs  mod.rs
crates/rustwork-cli/src/mcp/dispatcher/: handler.rs  mod.rs  routes.rs
crates/rustwork-cli/src/mcp/indexer/: mod.rs
crates/rustwork-cli/src/mcp/path_normalization/: normalize.rs  types.rs
crates/rustwork-cli/src/mcp/protocol/: mod.rs
crates/rustwork-cli/src/mcp/responses/: error.rs  file_doc.rs  mod.rs  route_impact.rs
crates/rustwork-cli/src/mcp/routes/: mod.rs  scanner.rs
crates/rustwork-cli/src/mcp/rustwork_get_conventions/: loader.rs  mod.rs  tests.rs  types.rs
crates/rustwork-cli/src/mcp/rustwork_get_database_schema/: introspection.rs  mod.rs  schema_types.rs
crates/rustwork-cli/src/mcp/rustwork_get_diagnostics/: mod.rs
crates/rustwork-cli/src/mcp/rustwork_get_env_setup/: mod.rs
crates/rustwork-cli/src/mcp/rustwork_get_file_doc/: mod.rs
crates/rustwork-cli/src/mcp/rustwork_get_function_usage/: mod.rs
crates/rustwork-cli/src/mcp/rustwork_get_models/: mod.rs  model_types.rs  parser.rs
crates/rustwork-cli/src/mcp/rustwork_get_route_impact/: mod.rs
crates/rustwork-cli/src/mcp/rustwork_get_routes/: mod.rs
crates/rustwork-cli/src/mcp/rustwork_get_services_overview/: aggregator.rs  metrics.rs  mod.rs  service_types.rs
crates/rustwork-cli/src/mcp/rustwork_grpc_detect_drift/: detector.rs  mod.rs  types.rs
crates/rustwork-cli/src/mcp/rustwork_grpc_diff_versions/: comparator.rs  git_loader.rs  mod.rs  suggester.rs  types.rs
crates/rustwork-cli/src/mcp/rustwork_grpc_get_call_graph/: analyzer.rs  mod.rs  types.rs
crates/rustwork-cli/src/mcp/rustwork_grpc_get_service_status/: analyzer.rs  mod.rs  types.rs
crates/rustwork-cli/src/mcp/rustwork_grpc_list_definitions/: analyzer.rs  mod.rs  scanner.rs  types.rs
crates/rustwork-cli/src/mcp/rustwork_grpc_test_connectivity/: mod.rs  tester.rs  types.rs
crates/rustwork-cli/src/mcp/rustwork_grpc_validate_workspace/: mod.rs  types.rs  validator.rs
crates/rustwork-cli/src/mcp/server/: constants.rs  mod.rs  stdio.rs  tcp.rs
crates/rustwork-cli/src/mcp/service_resolver/: helpers.rs  mod.rs  resolution.rs  types.rs
crates/rustwork-cli/src/mcp/state/: constructor.rs  events.rs  mod.rs  scan.rs  types.rs  watchers.rs
crates/rustwork-cli/src/mcp/tools/: mod.rs
crates/rustwork-cli/src/mcp/watcher/: implementation.rs  types.rs
crates/rustwork-cli/src/mcp/workspace_root/: detection.rs  helpers.rs  mod.rs  types.rs
crates/rustwork-cli/src/templates/: mod.rs  project.rs
crates/rustwork-cli/src/templates/common/: mod.rs
crates/rustwork-cli/src/templates/components/: controller_rs.rs  mod.rs  model_rs.rs  service_rs.rs
crates/rustwork-cli/src/templates/micro/: mod.rs
crates/rustwork-cli/src/templates/micro_shared/: mod.rs
crates/rustwork-cli/src/templates/migration/: cargo_toml.rs  initial_migration.rs  lib_rs.rs  main_rs.rs  migration_template.rs  mod.rs
crates/rustwork-cli/src/templates/monolith/: mod.rs
crates/rustwork-cli/src/templates/project/: app_rs.rs  cargo_toml.rs  cargo_toml_service.rs  default_toml.rs  dev_toml.rs  env_example.rs  errors_rs.rs  gitignore.rs  health_rs.rs  main_rs.rs  mod.rs  routes_rs.rs
crates/rustwork-cli/src/templates/vscode/: mcp_json.rs  mod.rs  settings_json.rs
crates/rustwork-cli/tests/: mcp_database_schema_integration.rs
crates/rustwork/src/: app.rs  config.rs  db.rs  errors.rs  lib.rs  middleware.rs  response.rs  state.rs
crates/rustwork/src/config/: mod.rs
crates/rustwork/src/config/builders/: load_app_config.rs  mod.rs  resolve_database_url.rs  sanitize_database_url.rs  validate_cors_config.rs
crates/rustwork/src/config/tests/: database_config_test.rs  mod.rs
crates/rustwork/src/config/types/: app_config.rs  cors_config.rs  database_config.rs  db_connection.rs  mod.rs  pool_config.rs  server_config.rs
crates/rustwork/src/database/: connect_database.rs  mod.rs  paginator.rs
crates/rustwork/src/middleware/: mod.rs  request_id.rs
crates/rustwork/src/middleware/cors/: build_cors_layer.rs  mod.rs
crates/rustwork/src/routing/: build_router.rs  mod.rs
crates/rustwork/src/routing/handlers/: db_info.rs  health_check.rs  mod.rs
test-api/: .env.example  .gitignore  Cargo.toml
test-api/config/: default.toml  dev.toml
test-api/migrations/: 20260107145810_create_posts.rs
test-api/src/: app.rs  errors.rs  main.rs  routes.rs
test-api/src/controllers/: health.rs  user.rs
test-api/src/graphql/: mod.rs
test-api/src/models/: mod.rs  post.rs
test-api/src/services/: mod.rs  post_service.rs
test-api/tests/: integration_test.rs
(+99 files in other folders)
