[workspace]
resolver = "2"
members = [
    "crates/rustwork",
    "crates/rustwork-cli",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["Rustwork Contributors"]
license = "MIT"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
config = "0.15"
dotenvy = "0.15"

# Database
sea-orm = { version = "1.0", features = ["sqlx-postgres", "sqlx-sqlite", "sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = { version = "1.0" }

# CLI
clap = { version = "4.5", features = ["derive"] }
minijinja = "2.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utils
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# GraphQL
async-graphql = "7.0"
async-graphql-axum = "7.0"

# OpenTelemetry
opentelemetry = "0.24"
opentelemetry-otlp = "0.17"
