[package]
name = "rustwork-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rustwork"
path = "src/main.rs"

[dependencies]
# Rustwork lib (for db commands)
rustwork = { path = "../rustwork" }

# CLI
clap = { workspace = true }
minijinja = { workspace = true }

# Utils
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Database
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
dotenvy = { workspace = true }
async-trait = "0.1"

# File operations
tokio = { workspace = true }
chrono = { workspace = true }

# Process management for watch mode
which = "8.0"

# Code parsing and analysis
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }

# File watching
notify = "8.0"

# Testing
[dev-dependencies]
tempfile = "3.8"
