[package]
name = "rustwork"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
otel = ["opentelemetry", "opentelemetry-otlp"]

[dependencies]
# Core
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
config = { workspace = true }
dotenvy = { workspace = true }

# Database
sea-orm = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }

# OpenTelemetry (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
